New note page added, fixed redirect to home, added floating button to note list for adding note (including route)

--- a/src/theme.css
+++ b/src/theme.css
@@ -91,6 +91,7 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
 }
 
 /* Additional Ionic Colors
@@ -145,6 +146,15 @@
   --ion-color-contrast-rgb: 255, 255, 255;
   --ion-color-shade: #344e86;
   --ion-color-tint: #4f6aa2;
+}
+
+.ion-color-orange {
+  --ion-color-base: var(--ion-color-orange);
+  --ion-color-base-rgb: var(--ion-color-orange-rgb);
+  --ion-color-contrast: var(--ion-color-orange-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-orange-contrast-rgb);
+  --ion-color-shade: var(--ion-color-orange-shade);
+  --ion-color-tint: var(--ion-color-orange-tint);
 }
 
 /* Shared Variables
