added support for temporary note timer, select options

--- a/src/styles/Note.css
+++ b/src/styles/Note.css
@@ -2,6 +2,8 @@
     text-decoration: none;
 }
 
-.note .expired {
-    opacity: .6
+.note.expired {
+    opacity: .6;
+    pointer-events: none;
+    cursor: none;
 }
